--- a/src/test.html
+++ b/src/test.html
@@ -1,44 +1,62 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="test.css">
 </head>
 <body>
-    <section>
-        <div class="container">
-            <div id="display"></div>
-            <div class="main">
-                <div class="buttons">
-                    <div class="button">AC</div>
-                    <div class="button">+/-</div>
-                    <div class="button">%</div>
-                    <div class="button">/</div>
-                    <div class="button">7</div>
-                    <div class="button">8</div>
-                    <div class="button">9</div>
-                    <div class="button">*</div>
-                    <div class="button">4</div>
-                    <div class="button">5</div>
-                    <div class="button">6</div>
-                    <div class="button">-</div>
-                    <div class="button">1</div>
-                    <div class="button">2</div>
-                    <div class="button">3</div>
-                    <div class="button">+</div>
-                    <div class="button">0</div>
-                    <div class="button">.</div>
-                    <div class="button">=</div>
-                    <div class="button"></div>
-                 </div>
+    <div class="wrapper">
+        <div class="calc">
+            <div class="sideicon">
+                <ul>
+                    <li><input type="text"></li>
+                    <li><input type="text"></li>
+                    <li><input type="text"></li>
+                </ul>
+            </div>
+            <div class="inp">
+                    <input type="text" id="val" placeholder="0">
+            </div>
+
+            <div class="flex-container">
+                <div class="row">
+                    <div class="coloum">AC</div>
+                    <div class="coloum">+/-</div>
+                    <div class="coloum">%</div>
+                    <div class="coloum c">&#xF7;</div>
+                </div> 
+
+                <div class="row">
+                    <div class="coloum">7</div>
+                    <div class="coloum">8</div>
+                    <div class="coloum">9</div>
+                    <div class="coloum c">*</div>
+                </div>
+                <div class="row">
+                    <div class="coloum">4</div>
+                    <div class="coloum">5</div>
+                    <div class="coloum">6</div>
+                    <div class="coloum c">-</div>
+                </div>
+                <div class="row">
+                    <div class="coloum">1</div>
+                    <div class="coloum">2</div>
+                    <div class="coloum">3</div>
+                    <div class="coloum c">+</div>
+                </div>
+                <div class="row">
+                    <div class="coloum t">0</div>
+                    
+                    <div class="coloum">.</div>
+                    <div class="coloum c">=</div>
+                </div>
             </div>
         </div>
-    </section>
 
-  
-    
+    </div>
 </body>
 </html>
